<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_top"
    android:orientation="vertical"
    tools:context="com.example.nzhang.proto_festival.fragment.InfoFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_group_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/info_about_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/picto_festival"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_about_button"
            style="@style/InfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/info_about_item_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/info_about_image"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/info_about_button_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_off"
            style="@style/InfoArrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_details_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top"
        android:padding="24dp">

        <TextView
            android:id="@+id/info_price_subtitle1"
            style="@style/InfoSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/info_about_item_subtitle1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/info_about_item_block"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_price_subtitle1" />

        <TextView
            android:id="@+id/info_about_link_FNFA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_about_text"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/info_about_item_link_FNFA"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_about_text" />

        <TextView
            android:id="@+id/info_about_link_AFCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_about_text"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/info_about_item_link_AFCA"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_about_link_FNFA" />

        <TextView
            android:id="@+id/info_about_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="292dp" />

        <TextView
            android:id="@+id/info_acces_subtitle1"
            style="@style/InfoSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/info_acces_item_subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_about_link_AFCA" />

        <TextView
            android:id="@+id/info_acces_subtitle1_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/info_acces_item_subtitle1_item1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1" />

        <TextView
            android:id="@+id/info_acces_subtitle1_item1_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:text="@string/info_acces_item_subtitle1_item1_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1_item1" />

        <TextView
            android:id="@+id/info_acces_subtitle1_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/info_acces_item_subtitle1_item2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1_item1_info"/>

        <TextView
            android:id="@+id/info_acces_subtitle1_item2_info"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:text="@string/info_acces_item_subtitle1_item2_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1_item2" />

        <TextView
            android:id="@+id/info_acces_subtitle1_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/info_acces_item_subtitle1_item3"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1_item2_info" />

        <TextView
            android:id="@+id/info_acces_subtitle1_item3_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/info_acces_item_subtitle1_item3_info"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1_item3" />

        <TextView
            android:id="@+id/info_acces_subtitle2"
            style="@style/InfoSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_acces_item_subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle1_item3_info" />

        <TextView
            android:id="@+id/info_acces_subtitle2_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/info_acces_item_subtitle2_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle2" />

        <TextView
            android:id="@+id/info_acces_subtitle2_item_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:text="@string/info_acces_item_subtitle2_item_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_acces_subtitle2_item" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
